<resources>
    <string name="app_name">AccessiMap</string>
    <string name="new_trip">New Trip</string>
    <string name="favorite">Saved Trips</string>
    <string name="history">Trip History</string>
    <string name="settings">Settings</string>

    <string name="settingsheader">Accessibility Settings</string>
    <string name="settingsbody">You can change your settings at any point using the Settings button</string>
    <string name="rampselect">Routes with Ramps</string>
    <string name="elevatorselect">Routes with Elevators</string>
    <string name="bathroomselect">Accessible Bathrooms</string>
    <string name="go">GO!</string>
    <string name="question">What is a utility?</string>
    <string name="recents">Recent Trips</string>
    <string name="make_new_trip">New Trip</string>
    <string name="back">BACK</string>
    <string name="building">Enter Building Name</string>
    <string name="type">Select Type of Location</string>
    <string name="roomnum">Enter Room Number</string>
    <string name="route_ramps">Route with Ramps</string>
    <string name="route_elevators">Route with Elevators</string>
    <string name="title_activity_outdoor_navigation">OutdoorNavigationActivity</string>
    <string name="enter_utility_type">Enter Utility Type</string>
    <string name="select_entrance">Select an Entrance</string>

</resources>