<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".NewTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Spinner
                android:id="@+id/room_spinner_to2"
                style="@style/AutoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:prompt="@string/roomnum"></Spinner>

            <Button
                android:id="@+id/back_top"
                style="@style/TopBackButton"
                android:onClick="accessHomeScreen" />

            <TextView
                style="@style/PageTitle"
                android:layout_marginRight="90dp"
                android:text="@string/new_trip"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            style="@style/HeaderText"
            android:id="@+id/settingsbody_from"
            android:text="FROM"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="83dp" />

        <Spinner
            android:id="@+id/building_spinner_from"
            style="@style/AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/spinner_background"
            android:prompt="@string/building"></Spinner>

        <Spinner
            android:id="@+id/entrance_spinner"
            style="@style/AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/spinner_background"
            android:prompt="@string/select_entrance"></Spinner>


        <TextView
            style="@style/HeaderText"
            android:id="@+id/settingsbody_to"
            android:text="TO"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="83dp" />



<!--        <Spinner-->
<!--            android:id="@+id/utility_spinner_to"-->
<!--            style="@style/AutoCompleteText"-->
<!--            android:background="@drawable/spinner_background"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40sp"-->
<!--            android:prompt="@string/enter_utility_type">-->
<!--        </Spinner>-->

        <Spinner
            android:id="@+id/building_spinner_to"
            style="@style/AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/spinner_background"
            android:prompt="@string/roomnum"></Spinner>
        <Spinner
            android:id="@+id/room_type_spinner_to"
            style="@style/AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/spinner_background"
            android:prompt="@string/roomnum"></Spinner>
        <Spinner
            android:id="@+id/room_spinner_to"
            style="@style/AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/spinner_background"
            android:prompt="@string/roomnum"></Spinner>

        <TextView
            android:id="@+id/preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sanchez"
            android:text="Default Text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/preferOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/preference"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/sanchez"
            android:orientation="vertical"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanchez"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/route_ramps" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanchez"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/route_elevators" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            style="@style/FooterButton"
            android:layout_width="match_parent"
            android:id="@+id/go"
            android:onClick="openIndoorNav"
            android:text="@string/go"
            android:textSize="40sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>